# libc-extended

./: .clang-format  .gitignore  CMakeLists.txt  Makefile  README.md  README.txt  log.txt  main.c  s21_abs.c  s21_acos.c  s21_asin.c  s21_atan.c  s21_ceil.c  s21_cos.c  s21_exp.c  s21_fabs.c  s21_floor.c  s21_fmod.c  s21_helpers.c  s21_log.c  s21_math.h  s21_pow.c  s21_sin.c  s21_sqrt.c  s21_tan.c  stepa.py  test  test.c
cmake/: build_config.cmake  coverage.cmake  docs.cmake  linters.cmake  programs.cmake  utils.cmake
libs/: LICENSE
libs/math/: main.c  s21_asin.c  s21_atan.c  s21_cos.c  s21_fmod.c  s21_pow.c  s21_sin.c  s21_sqrt.c  s21_tan.c
libs/matrix/: README.md
libs/string/: README.md
src/: Dockerfile  Makefile  coverage.info  lint.sh  main.c  s21_c_sharp.c  s21_calc_complements.c  s21_create_matrix.c  s21_determinant.c  s21_eq_matrix.c  s21_inverse_matrix.c  s21_matrix.c  s21_matrix.h  s21_mult_matrix.c  s21_mult_number.c  s21_remove_matrix.c  s21_sprintf.c  s21_sscanf.c  s21_sscanf.h  s21_strerror.c  s21_string.h  s21_sub_matrix.c  s21_sum_matrix.c  s21_transpose.c  test  test.c  test_gcov
src/bigint/: CMakeLists.txt  README.md
src/bigint/src/arithmetic/: s21_add.c  s21_integer_div.c  s21_mod.c  s21_mul.c  s21_normalize.c  s21_sub.c
src/bigint/src/binary_api/: s21_binary_arithmetic.c  s21_binary_bool_logic.c  s21_binary_exponent.c  s21_binary_shifts.c  s21_core_bit_api.c
src/bigint/src/comparison/: s21_is_equal.c  s21_is_greater.c  s21_is_less.c
src/bigint/src/conversion/: s21_from_decimal_to_float.c  s21_from_decimal_to_int.c  s21_from_float_to_decimal.c  s21_from_int_to_decimal.c  s21_negate.c
src/bigint/src/includes/: s21_arithmetic.h  s21_comparison.h  s21_conversion.h  s21_decimal.h  s21_rounding.h
src/bigint/src/includes/binary_api/: s21_binary_arithmetic.h  s21_binary_logic.h  s21_binary_shifts.h  s21_core.h  s21_exponent.h
src/bigint/src/rounding/: s21_bank_rounding.c  s21_floor.c  s21_round.c  s21_rounding_helpers.c  s21_truncate.c
src/bigint/src/tests/: CMakeLists.txt
src/bigint/src/tests/arithmetic_tests/: test_s21_add.c  test_s21_div.c  test_s21_mod.c  test_s21_mul.c  test_s21_sub.c
src/bigint/src/tests/comparison_tests/: test_s21_is_equal_not_equal.c  test_s21_is_greater.c  test_s21_is_greater_or_equal.c  test_s21_is_less.c  test_s21_is_less_or_equal.c
src/bigint/src/tests/conversion_tests/: test_s21_from_decimal_to_float.c  test_s21_from_decimal_to_int.c  test_s21_from_float_to_decimal.c  test_s21_from_int_to_decimal.c  test_s21_negate.c
src/bigint/src/tests/includes/: printers.h  s21_decimal_test.h  s21_int128_helpers.h
src/bigint/src/tests/rounding_tests/: test_s21_floor.c  test_s21_round.c  test_s21_truncate.c
src/bigint/src/tests/test_helpers/: int128_converters.c  printers.c  random_values.c
src/coverage/: index-sort-f.html  index-sort-l.html  index.html
src/math/: CMakeLists.txt  Makefile  README.md  s21_exp.c  s21_helpers.c
src/math/src/: s21_asin.c  s21_atan.c  s21_fabs.c  s21_floor.c  s21_helpers.c  s21_pow.c  s21_sqrt.c  s21_tan.c
src/math/src/includes/: s21_math.h
src/math/src/tests/: CMakeLists.txt  math_test_runner.c  test_s21_log.c  test_s21_sqrt.c
src/math/src/tests/includes/: s21_math_test.h
src/math/tests/: s21_math_test.h  test_s21_atan.c  test_s21_pow.c
src/matrix/: CMakeLists.txt  README.md
src/matrix/src/: Dockerfile  Makefile  s21_calc_complements.c  s21_helpers.c  s21_mult_number.c  s21_transpose.c
src/matrix/src/.cache/clangd/index/: gsl_block_complex_float.h.3BCE5120A894FB89.idx  gsl_block_float.h.6C704AC02F63AC09.idx  gsl_block_long_double.h.03B9EE905B664E1E.idx  gsl_block_short.h.C12595603F473B09.idx  gsl_block_uchar.h.FFB2462CEDAE99BC.idx  gsl_block_ulong.h.8961A13861662BE5.idx  gsl_matrix_complex_float.h.DC8ACB5924A6CD7F.idx  gsl_matrix_complex_long_double.h.A9E615DD9DE36DDC.idx  gsl_matrix_short.h.BB4A0EF3D372E129.idx  gsl_vector_complex_double.h.E19996FAA9B1DDE1.idx  gsl_vector_complex_long_double.h.BCA50065FF02DBA6.idx  gsl_vector_double.h.AF0F0BD539727321.idx  gsl_vector_int.h.83C75A86809D3EF3.idx  gsl_vector_uchar.h.F50B531B7F03F715.idx  gsl_vector_uint.h.24FC5F0BA3E398D9.idx  s21_inverse_matrix.c.6CB7060BCEDC1865.idx  s21_mult_number.c.FD439B44D7BFB028.idx  test_s21_matrix.h.727E5E4456D88DBE.idx  test_s21_mult_matrix.c.30800B0543AF4387.idx
src/matrix/src/tests/: CMakeLists.txt  test_s21_determinant.c  test_s21_inverse_matrix.c  test_s21_transpose.c
src/matrix/src/tests/includes/: test_s21_matrix.h
src/old_tests/: s21_test_runner.c  test_s21_inverse_matrix.c  test_s21_matrix.h  test_s21_mult_matrix.c
src/string/: CMakeLists.txt  README.md
src/string/s21_presentation/: lecture_notes.md
src/string/src/: s21_sprintf.c  s21_sprintf.h  s21_sscanf.c
src/string/src/includes/: s21_sscanf.h  s21_string.h
src/string/src/tests/: CMakeLists.txt  s21_tests.h  string_test_runner.c  test_atoi.c  test_insert.c  test_memchr.c  test_memcmp.c  test_memcpy.c  test_memmove.c  test_memset.c  test_sprintf.c  test_sscanf.c  test_strcat.c  test_strchr.c  test_strcmp.c  test_strcpy.c  test_strcspn.c  test_strerror.c  test_strlen.c  test_strncat.c  test_strncmp.c  test_strncpy.c  test_strntollu.c  test_strpbrk.c  test_strrchr.c  test_strspn.c  test_strstr.c  test_strtok.c  test_strtold.c  test_to_lower.c  test_to_upper.c  test_trim.c
src/tests/: math_py.py  s21_math_test.h  test_s21_acos.c  test_s21_asin.c  test_s21_atan.c  test_s21_calc_complements.c  test_s21_determinant.c  test_s21_fabs.c  test_s21_inverse_matrix.c  test_s21_log.c  test_s21_matrix.c  test_s21_matrix.h  test_s21_mult_matrix.c  test_s21_mult_number_matrix.c  test_s21_pow.c  test_s21_sin.c  test_s21_sqrt.c  test_s21_tan.c  test_s21_transpose.c  test_s21_transpose_matrix.c  test_sprintf.c
src/tests_includes/: s21_tests.h
tests/: s21_math_test.h  test_s21_abs.c  test_s21_acos.c  test_s21_asin.c  test_s21_atan.c  test_s21_ceil.c  test_s21_cos.c  test_s21_exp.c  test_s21_fabs.c  test_s21_floor.c  test_s21_fmod.c  test_s21_log.c  test_s21_pow.c  test_s21_sin.c  test_s21_sqrt.c  test_s21_tan.c
(+247 files in other folders)
